# cli-lite

./: LICENSE  README.md  pyproject.toml
cli_lite/: __init__.py
tests/: __init__.py
