[tool.poetry]
name = "cli-lite"
version = "0.1.0"
description = ""
authors = ["SpideyZac <66804504+SpideyZac@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.45.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
